--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ crossbeam="0.8"
 futures = "0.3"
 log = "0.4"
 once_cell = "1.8"
+hyper = { version = "0.14.0", features = ["runtime"] }
+hyper-proxy = "0.9.0"
+hyper-tls = "0.5.0"
 reqwest = "0.11"
 rmp-serde = "0.15"
 serde_bytes = "0.11"
@@ -22,6 +25,8 @@ thiserror = "1.0"
 tokio = { version = "1", features = ["full"] }
 toml = "0.5"
 blobstore-interface = { git = "https://github.com/based-template/auxiliary-blobstore-interface.git" }
+rusoto_core = { version="0.46.0", default_features=false, features=["rustls"] }
+rusoto_s3 = { version="0.46.0", default_features=false, features=["rustls"] }
 # wasmcloud-interface-factorial = "0.1"
 wasmbus-rpc = "0.3"
 
